csrx-eks-deploy/2-north-south-ALB-IngressController/04-csrx2-byol-alg-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csrx2-byol
  labels:
    app: csrx2-byol
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: csrx2-byol
  template:
    metadata:
      name: csrx2-byol
      labels:
        app: csrx2-byol
      annotations:
        k8s.v1.cni.cncf.io/networks: br-51@eth1, br-52@eth2
    spec:      
      serviceAccountName: csrxpod
      containers:
      - name: csrx2-byol
        securityContext:
           privileged: true
        image: <csrx-image> 
        ports:
          - containerPort: 80
        volumeMounts:
        - name: disk
          mountPath: "/dev"
        - name: config
          mountPath: "/var/jail"
      volumes:
      - name: disk
        hostPath:
          path: /dev
          type: Directory
      - name: config
        configMap:
          name: cm-byol
          items:
          - key: csrx_config
            path: csrx_config
          - key: csrx_license
            path: .csrx_license
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csrx2-byol
  name: csrx2-byol
spec:
  selector:
      app: csrx2-byol
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
